--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,13 +13,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/inner_frame_layout_padding"
-        app:boxedEdges="all">
+        android:boxedEdges="all">
 
         <TextView
             android:id="@+id/text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/hello_world" />
+            android:layout_width="156dp"
+            android:layout_height="145dp"
+            android:layout_gravity="center"
+            android:clickable="true"
+            android:text="Touch to begin typing" />
 
     </FrameLayout>
 </androidx.wear.widget.BoxInsetLayout>
