--- a/app/src/main/res/layout/key_menu.xml
+++ b/app/src/main/res/layout/key_menu.xml
@@ -9,11 +9,13 @@
     tools:deviceIds="wear">
 
     <RelativeLayout
+        android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/userMessage_typing"
+            android:clickable="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
