--- a/app/src/main/res/layout/keyboard_menu.xml
+++ b/app/src/main/res/layout/keyboard_menu.xml
@@ -9,19 +9,21 @@
     tools:deviceIds="wear">
 
     <RelativeLayout
+        android:id="@+id/layout"
+        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/userMessage_Menu"
+            android:clickable="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="25dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="25dp"
             android:gravity="center"
-            android:text="test"
             android:textColor="@color/white"
             android:textSize="15dp" />
 
