--- a/app/src/main/res/layout/key_menu.xml
+++ b/app/src/main/res/layout/key_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,19 +19,19 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="25dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
             android:gravity="center"
             android:text=""
             android:textColor="@color/white"
-            android:textSize="15dp" />
+            android:textSize="15sp" />
 
         <ImageView
             android:id="@+id/key1"
             android:layout_width="match_parent"
             android:layout_height="88dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_gravity="bottom|center_horizontal"
             android:layout_marginLeft="0dp"
@@ -40,15 +39,15 @@
             android:layout_marginBottom="37dp"
             android:scaleX="1.2"
             android:scaleY="0.7"
-            android:src="@drawable/curved_corners_rect" />
+            android:src="@drawable/curved_corners_rect"/>
 
         <TextView
             android:id="@+id/characters"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/key1"
+            android:layout_alignStart="@id/key1"
             android:layout_alignTop="@id/key1"
-            android:layout_alignRight="@id/key1"
+            android:layout_alignEnd="@id/key1"
             android:layout_alignBottom="@id/key1"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="0dp"
@@ -56,8 +55,8 @@
             android:layout_marginRight="0dp"
             android:layout_marginBottom="0dp"
             android:gravity="center"
-            android:text="a b c 0 1"
+            android:text=""
             android:textColor="@color/black"
-            android:textSize="30dp" />
+            android:textSize="30sp" />
     </RelativeLayout>
 </androidx.wear.widget.BoxInsetLayout>
